rtg_tests/negative/unused_local/go.mod
module example.com/rtgtests/negative/unused_local

go 1.25
